# bioinfo_7gd_project

./: Aligment.cpp  Aligment.hpp  CMakeLists.txt  binom_line_reader.cpp  binom_line_reader.hpp  console_work.cpp  console_work.hpp  git_hub_script.sh  main.cpp  tester.cpp  tester.hpp  trash.cpp
